Fixed box-shadow on Safari

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,7 +54,7 @@
 }
 
 .themeWrapper {
-  padding: 1.5rem 1rem 2rem 0;
+  padding: 1.5rem 0 2rem 0;
   margin-bottom: 1rem;
   display: flex;
   justify-content: center;
